# Jarvis-AI-Assistant

./: .gitignore  FIXED_ISSUES_SUMMARY.md  F_conversation.ipynb  Image_Generative_Preprocessing.ipynb  PAPERSPACE_COMMANDS.md  Project_1.ipynb  README.md  README_GRADIENT.md  RTX5000_Jarvis_Guide.md  RTX5000_TRAINING.md  alternative.py  assistant.py  build.py  cleanup_plan.md  cleanup_redundant_files.sh  cleanup_summary.md  clear_gpu_memory.py  colab_setup.sh  command_examples.txt  direct_edit.py  direct_load.py  doc.md  edit_existing_files.sh  explore_dataset.py  fix_all_deps.sh  fix_and_run_deepseek.sh  fix_and_run_training.sh  fix_and_run_training.sh.deprecated  fix_attention_mask.py  fix_attention_mask_error.py  fix_attention_mask_size.py  fix_dependencies.sh  fix_flash_attn.sh  fix_lora_config.py  fix_numpy.sh  fix_numpy_errors.sh  fix_numpy_errors.txt  fix_rtx5000.sh  fix_tokenizer_memory.py  fix_transformer_issues.py  (+55 more)
archive/: main_fixed_v2.py  main_homebrew_fix.py
assets/: README.md
assistant/: __init__.py
backup_20250508_012406/: fix_and_run_training_fixed.sh  free_gpu_and_train.sh  monitor_gpu.py  run_deepseek_training.sh  run_fixed_training.sh  run_gpu_training_test.sh  run_patched_training.py  test_gpu_training.py
backup_20250508_034141/: fix_unsloth_deepseek.py  run_training.sh
backup_20250510_013130/: cleanup_redundant_files.sh
backup_20250510_013245/: cleanup_root_redundant_files.sh  fix_deepseek_training.py  test_ultimate_fix.py
backup_cleanup_scripts/: cleanup_generative_ai_module.sh  cleanup_remaining_redundant_files.sh  cleanup_root_directory.sh  cleanup_setup_directory.sh
commands/: __init__.py  alarm.py  app_control.py  file_operations.py  google.py  maps_search.py  media.py  netflix.py  open_website.py  spotify.py  system_control.py  youtube.py
data/: chats.json  messages.json
docs/: README_LAION.md  REFACTORING.md  RTX5000_Jarvis_Guide.md  amr_finetune_guide.md  fine_tuning_guide.md  image-to-image.md
evaluation/: evaluate_model.py
examples/: add_noise.ipynb  stable_diffusion_amr3303.ipynb
metrics/: code_writing_prompts_20250413_110728.json  code_writing_prompts_20250415_065029.json  code_writing_prompts_20250419_235033.json  code_writing_prompts_20250420_011728.json  code_writing_prompts_20250421_181633.json  deepseek_error_training_20250419_223605.json  preprocessing_code_20250419_204426.json  preprocessing_code_20250419_204902.json  preprocessing_code_20250419_205100.json  preprocessing_code_20250419_205409.json  preprocessing_code_20250419_205642.json  preprocessing_code_20250419_215334.json  preprocessing_code_20250419_220812.json  preprocessing_code_20250419_223307.json  preprocessing_code_20250419_223956.json  preprocessing_code_20250419_224047.json  preprocessing_code_20250419_230654.json  preprocessing_code_20250419_235812.json  preprocessing_code_20250420_000807.json  preprocessing_persona_chat_20250412_215243.json  preprocessing_persona_chat_20250412_215316.json  preprocessing_persona_chat_20250414_184216.json  preprocessing_persona_chat_20250419_175832.json  preprocessing_persona_chat_20250419_180309.json  preprocessing_persona_chat_20250419_184002.json  preprocessing_persona_chat_20250419_184044.json  preprocessing_persona_chat_20250419_222001.json  preprocessing_persona_chat_20250419_232123.json  preprocessing_persona_chat_20250419_235351.json  preprocessing_persona_chat_20250419_235907.json  preprocessing_persona_chat_20250420_000900.json  preprocessing_writing_prompts_20250412_215250.json  (+32 more)
other_files/text_code_generation/: ATTENTION_MASK_FIX_SUMMARY.md  pyproject.toml  test_attention_mask_fix.py  test_peft_fix.py  test_unified_deepseek.py
other_files/text_code_generation/backup_20250508_222826/: fix_custom_unsloth.py  fix_tokenization.py
other_files/text_code_generation/backups/backup_20250505_001338/src/generative_ai_module/: check_spacy.py  fix_imports.py  fix_jarvis_imports.py  import_fix.py
other_files/text_code_generation/backups/backup_20250508_012406/: cpu_first_patch.py  diagnose_gpu_memory.py  direct_train_deepseek.sh  paperspace_deepseek_train.py  reset_gpu_and_train.sh  run_memory_efficient_training.sh
other_files/text_code_generation/backups/backup_20250508_034141/: check_unsloth_implementation.py  fix_all_unsloth_issues.py  fix_dataset_processing.py  fix_unsloth_issues.sh  run_deepseek_training.sh
other_files/text_code_generation/docs/: TRAINING_GUIDE.md
other_files/text_code_generation/setup/: README.md  bypass_deepseek.py  cleanup_files.sh  comprehensive_attention_mask_fix.py  consolidated_fix_unsloth.sh  debug_unsloth.py  fix_all_setup_scripts.py  fix_all_string_literals.py  fix_attention_mask.sh  fix_bitsandbytes_version.py  fix_docstrings.py  fix_jarvis_unified.py  fix_joblib.py  fix_spacy_for_paperspace.sh  fix_syntax_errors.py  fix_tensor_size_mismatch.py  fix_tuple_unpacking_error.py  gpu_utils.py  mount_drive_paperspace.py  run_spacy_fixes.sh  run_training.sh  train_jarvis.sh  verify_gpu_code.py  verify_gpu_text.py  verify_models.py
other_files/text_code_generation/src/generative_ai_module/: README.md  __init__.py  code_generator.py  code_preprocessing.py  colab_commands.py  dataset_processor.py  deepseek_handler.py  direct_model_fix.py  evaluate_generation.py  evaluation_example.py  finetune_deepseek.py  finetune_on_mini.py  import_utilities.py  improved_preprocessing.py  jarvis_unified.py  mini_dataset.txt  prompt_enhancer.py  run_finetune.py  set_paperspace_env.py  storage_optimization.py  sync_gdrive.py  test_dataset.py  train_with_cnn_model.py  train_with_preprocessor.py  unified_dataset_handler.py  unified_deepseek_training.py.bak3  unsloth_deepseek.py  use_improved_preprocessor.py  utils.py
other_files/text_code_generation/src/generative_ai_module/README/: ARCHITECTURE.md  CLEANUP_PLAN.md  README_GRADIENT.md  README_MODULE_INSTS.md  evaluation_metrics.md  gdrive_sync_example.md
other_files/text_code_generation/src/generative_ai_module/tests/: minimal_test.py
other_files/text_code_generation/tests/: test_minimal_spacy.py  test_minimal_tokenizer.py  test_spacy.py
(+347 files in other folders)
