[tool.poetry]
name = "jarvis-ai-assistant"
version = "0.1.0"
description = "Jarvis AI assistant"
authors = ["noah-mclain <nadam.30032415@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Core CUDA 12.1 Stack --------------------------------------------------------
torch = {version = "2.3.1", source = "pytorch"}
torchvision = {version = "0.18.1", source = "pytorch"}
torchaudio = {version = "2.3.1", source = "pytorch"}
xformers = {version = "0.0.25", source = "pytorch"}
triton = "3.0.0"
bitsandbytes = "0.45.4"
flash-attn = "2.5.8"

# Hugging Face Ecosystem ------------------------------------------------------
transformers = "4.41.2"
accelerate = "0.34.1"
peft = "0.15.2"
trl = "0.15.2"
datasets = "2.19.0"
huggingface-hub = "0.30.2"
safetensors = "0.5.3"

# Unsloth & Optimization ------------------------------------------------------
unsloth = {git = "https://github.com/unslothai/unsloth.git", extras = ["cu121"]}
unsloth_zoo = "2025.4.4"

# NLP & Utilities -------------------------------------------------------------
spacy = "3.7.4"
nltk = "3.8.1"
tqdm = "4.66.2"
pandas = "2.2.2"
scikit-learn = "1.4.2"
numpy = "1.26.4"
pydantic = "1.10.13"

# Storage & Cloud Integration -------------------------------------------------
boto3 = "1.34.86"
gdown = "5.1.0"
fsspec = "2024.3.1"
psutil = "5.9.8"

# Development Tools -----------------------------------------------------------
jupyterlab = "4.4.1"
tensorboard = "2.16.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies."en-core-web-sm"]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"

[build-system]
requires = ["poetry-core>=2.0.0", "setuptools", "ninja", "cmake"]
build-backend = "poetry.core.masonry.api"